--- a/core/SpamBaseLearning.ipynb
+++ b/core/SpamBaseLearning.ipynb
@@ -74,12 +74,12 @@
        "      <th>word_freq_order</th>\n",
        "      <th>word_freq_mail</th>\n",
        "      <th>...</th>\n",
-       "      <th>char_freq_%3B</th>\n",
-       "      <th>char_freq_%28</th>\n",
-       "      <th>char_freq_%5B</th>\n",
-       "      <th>char_freq_%21</th>\n",
-       "      <th>char_freq_%24</th>\n",
-       "      <th>char_freq_%23</th>\n",
+       "      <th>char_freq_;</th>\n",
+       "      <th>char_freq_(</th>\n",
+       "      <th>char_freq_[</th>\n",
+       "      <th>char_freq_!</th>\n",
+       "      <th>char_freq_$</th>\n",
+       "      <th>char_freq_#</th>\n",
        "      <th>capital_run_length_average</th>\n",
        "      <th>capital_run_length_longest</th>\n",
        "      <th>capital_run_length_total</th>\n",
@@ -227,19 +227,19 @@
        "3           0.63            0.00              0.31                0.63   \n",
        "4           0.63            0.00              0.31                0.63   \n",
        "\n",
-       "   word_freq_order  word_freq_mail  ...  char_freq_%3B  char_freq_%28  \\\n",
-       "0             0.00            0.00  ...           0.00          0.000   \n",
-       "1             0.00            0.94  ...           0.00          0.132   \n",
-       "2             0.64            0.25  ...           0.01          0.143   \n",
-       "3             0.31            0.63  ...           0.00          0.137   \n",
-       "4             0.31            0.63  ...           0.00          0.135   \n",
+       "   word_freq_order  word_freq_mail  ...  char_freq_;  char_freq_(  \\\n",
+       "0             0.00            0.00  ...         0.00        0.000   \n",
+       "1             0.00            0.94  ...         0.00        0.132   \n",
+       "2             0.64            0.25  ...         0.01        0.143   \n",
+       "3             0.31            0.63  ...         0.00        0.137   \n",
+       "4             0.31            0.63  ...         0.00        0.135   \n",
        "\n",
-       "   char_freq_%5B  char_freq_%21  char_freq_%24  char_freq_%23  \\\n",
-       "0            0.0          0.778          0.000          0.000   \n",
-       "1            0.0          0.372          0.180          0.048   \n",
-       "2            0.0          0.276          0.184          0.010   \n",
-       "3            0.0          0.137          0.000          0.000   \n",
-       "4            0.0          0.135          0.000          0.000   \n",
+       "   char_freq_[  char_freq_!  char_freq_$  char_freq_#  \\\n",
+       "0          0.0        0.778        0.000        0.000   \n",
+       "1          0.0        0.372        0.180        0.048   \n",
+       "2          0.0        0.276        0.184        0.010   \n",
+       "3          0.0        0.137        0.000        0.000   \n",
+       "4          0.0        0.135        0.000        0.000   \n",
        "\n",
        "   capital_run_length_average  capital_run_length_longest  \\\n",
        "0                       3.756                          61   \n",
@@ -292,8 +292,8 @@
       "       'word_freq_pm', 'word_freq_direct', 'word_freq_cs', 'word_freq_meeting',\n",
       "       'word_freq_original', 'word_freq_project', 'word_freq_re',\n",
       "       'word_freq_edu', 'word_freq_table', 'word_freq_conference',\n",
-      "       'char_freq_%3B', 'char_freq_%28', 'char_freq_%5B', 'char_freq_%21',\n",
-      "       'char_freq_%24', 'char_freq_%23', 'capital_run_length_average',\n",
+      "       'char_freq_;', 'char_freq_(', 'char_freq_[', 'char_freq_!',\n",
+      "       'char_freq_$', 'char_freq_#', 'capital_run_length_average',\n",
       "       'capital_run_length_longest', 'capital_run_length_total', 'class'],\n",
       "      dtype='object')\n",
       "58\n",
@@ -399,12 +399,12 @@
        "      <th>word_freq_order</th>\n",
        "      <th>word_freq_mail</th>\n",
        "      <th>...</th>\n",
-       "      <th>char_freq_%3B</th>\n",
-       "      <th>char_freq_%28</th>\n",
-       "      <th>char_freq_%5B</th>\n",
-       "      <th>char_freq_%21</th>\n",
-       "      <th>char_freq_%24</th>\n",
-       "      <th>char_freq_%23</th>\n",
+       "      <th>char_freq_;</th>\n",
+       "      <th>char_freq_(</th>\n",
+       "      <th>char_freq_[</th>\n",
+       "      <th>char_freq_!</th>\n",
+       "      <th>char_freq_$</th>\n",
+       "      <th>char_freq_#</th>\n",
        "      <th>capital_run_length_average</th>\n",
        "      <th>capital_run_length_longest</th>\n",
        "      <th>capital_run_length_total</th>\n",
@@ -708,31 +708,31 @@
        "4597           0.00             0.0              0.00                0.00   \n",
        "4600           0.00             0.0              0.00                0.00   \n",
        "\n",
-       "      word_freq_order  word_freq_mail  ...  char_freq_%3B  char_freq_%28  \\\n",
-       "0                0.00            0.00  ...            0.0          0.000   \n",
-       "3                0.31            0.63  ...            0.0          0.137   \n",
-       "4                0.31            0.63  ...            0.0          0.135   \n",
-       "5                0.00            0.00  ...            0.0          0.223   \n",
-       "6                0.00            0.64  ...            0.0          0.054   \n",
-       "...               ...             ...  ...            ...            ...   \n",
-       "4593             0.00            0.00  ...            0.0          0.000   \n",
-       "4594             0.00            0.00  ...            0.0          0.630   \n",
-       "4595             0.00            0.00  ...            0.0          0.000   \n",
-       "4597             0.00            0.00  ...            0.0          0.000   \n",
-       "4600             0.00            0.00  ...            0.0          0.000   \n",
+       "      word_freq_order  word_freq_mail  ...  char_freq_;  char_freq_(  \\\n",
+       "0                0.00            0.00  ...          0.0        0.000   \n",
+       "3                0.31            0.63  ...          0.0        0.137   \n",
+       "4                0.31            0.63  ...          0.0        0.135   \n",
+       "5                0.00            0.00  ...          0.0        0.223   \n",
+       "6                0.00            0.64  ...          0.0        0.054   \n",
+       "...               ...             ...  ...          ...          ...   \n",
+       "4593             0.00            0.00  ...          0.0        0.000   \n",
+       "4594             0.00            0.00  ...          0.0        0.630   \n",
+       "4595             0.00            0.00  ...          0.0        0.000   \n",
+       "4597             0.00            0.00  ...          0.0        0.000   \n",
+       "4600             0.00            0.00  ...          0.0        0.000   \n",
        "\n",
-       "      char_freq_%5B  char_freq_%21  char_freq_%24  char_freq_%23  \\\n",
-       "0               0.0          0.778          0.000            0.0   \n",
-       "3               0.0          0.137          0.000            0.0   \n",
-       "4               0.0          0.135          0.000            0.0   \n",
-       "5               0.0          0.000          0.000            0.0   \n",
-       "6               0.0          0.164          0.054            0.0   \n",
-       "...             ...            ...            ...            ...   \n",
-       "4593            0.0          1.052          0.000            0.0   \n",
-       "4594            0.0          0.000          0.000            0.0   \n",
-       "4595            0.0          0.000          0.000            0.0   \n",
-       "4597            0.0          0.353          0.000            0.0   \n",
-       "4600            0.0          0.125          0.000            0.0   \n",
+       "      char_freq_[  char_freq_!  char_freq_$  char_freq_#  \\\n",
+       "0             0.0        0.778        0.000          0.0   \n",
+       "3             0.0        0.137        0.000          0.0   \n",
+       "4             0.0        0.135        0.000          0.0   \n",
+       "5             0.0        0.000        0.000          0.0   \n",
+       "6             0.0        0.164        0.054          0.0   \n",
+       "...           ...          ...          ...          ...   \n",
+       "4593          0.0        1.052        0.000          0.0   \n",
+       "4594          0.0        0.000        0.000          0.0   \n",
+       "4595          0.0        0.000        0.000          0.0   \n",
+       "4597          0.0        0.353        0.000          0.0   \n",
+       "4600          0.0        0.125        0.000          0.0   \n",
        "\n",
        "      capital_run_length_average  capital_run_length_longest  \\\n",
        "0                          3.756                          61   \n",
@@ -830,12 +830,12 @@
       "45       word_freq_edu                 4084      517       \n",
       "46       word_freq_table               4538      63        \n",
       "47       word_freq_conference          4398      203       \n",
-      "48       char_freq_%3B                 3811      790       \n",
-      "49       char_freq_%28                 1886      2715      \n",
-      "50       char_freq_%5B                 4072      529       \n",
-      "51       char_freq_%21                 2343      2258      \n",
-      "52       char_freq_%24                 3201      1400      \n",
-      "53       char_freq_%23                 3851      750       \n",
+      "48       char_freq_;                   3811      790       \n",
+      "49       char_freq_(                   1886      2715      \n",
+      "50       char_freq_[                   4072      529       \n",
+      "51       char_freq_!                   2343      2258      \n",
+      "52       char_freq_$                   3201      1400      \n",
+      "53       char_freq_#                   3851      750       \n",
       "54       capital_run_length_average    0         4601      \n",
       "55       capital_run_length_longest    0         4601      \n",
       "56       capital_run_length_total      0         4601      \n",
